force-app/poc/default/objects/Site_Item__c/Site_Item__c.object-meta.xml
<CustomObject>
    <description>An Inspection Item linked to a Site</description>
    <label>Site Item</label>
    <nameField>
        <displayFormat>SI-{0000}</displayFormat>
        <label>Site Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Site Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>