force-app/poc/default/objects/Site_Item__c/fields/Inspection_Item__c.field-meta.xml
<CustomField>
    <fullName>Inspection_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inspection Item</label>
    <referenceTo>Inspection_Item__c</referenceTo>
    <relationshipLabel>Site Items</relationshipLabel>
    <relationshipName>Site_Items</relationshipName>
    <type>Lookup</type>
</CustomField>