force-app/poc/default/objects/Site_Item__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <description>A description of the location of this item</description>
    <label>Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>