force-app/poc/default/objects/Site_Item__c/fields/Site__c.field-meta.xml
<CustomField>
    <fullName>Site__c</fullName>
    <label>Site</label>
    <referenceTo>Site__c</referenceTo>
    <relationshipLabel>Site Items</relationshipLabel>
    <relationshipName>Site_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>